# argus

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py  middleware.py
backend/app/api/v1/: health.py  router.py  screener.py  search.py  signals.py  stock.py
backend/app/cache/: __init__.py  keys.py  ttl.py
backend/app/core/: __init__.py  indicators.py  screener.py  signals.py  universe.py
backend/app/db/: __init__.py  session.py
backend/app/errors/: __init__.py  exceptions.py  handlers.py
backend/app/models/: __init__.py  db.py  indicator.py  screener.py  signal.py  stock.py
backend/app/services/: __init__.py  cache.py  market_data.py  scheduler.py
backend/app/tasks/: detect_signals.py  refresh_data.py
backend/app/utils/: logging.py  market_hours.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py
backend/tests/unit/: test_indicators.py  test_signals.py  test_stock_chart.py
docs/: API.md  ARCHITECTURE.md  BACKEND_REFERENCE.md  CODE_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT.md  FRONTEND_REFERENCE.md  INDEX.md  TROUBLESHOOTING.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  screener.ts  search.ts  signals.ts  stock.ts
(+43 files in other folders)
